Updated button handling in edit: Always render buttons as <a> tags, and replace these with <input type=button> if EditSettings.useButtons is set. This should hopefully fix the weird bug on Safari / Webkit where buttons very rarely get all scrambled.

--- a/edit/htdocs/css/edit.css
+++ b/edit/htdocs/css/edit.css
@@ -12,7 +12,7 @@
 
 /* default */
 
-.edit, #edit td, #edit input, #edit select, #edit textarea, #edit a.button, #edit .tab-pane .edit-title {
+#edit td, #edit input, #edit select, #edit textarea, #edit a.button, #edit .tab-pane .edit-title {
 	font-family: "Lucida Grande", Verdana, sans-serif;
 	font-size: 10px;
 }
@@ -27,7 +27,7 @@
 	vertical-align: top;
 }
 
-#edit a.button {
+#edit a.button, #edit td a.button {
 	white-space: nowrap;
 	border: 1px solid;
 	border-color: #fff #666 #666 #fff;
